use a set instead of array; remove deprecated option for GClog; #245