@@ -71,12 +71,11 @@ public class RegressionUtilities {
 	public static final String GC_LOG_FILES_REGEX = "gc(.*).log";
 	public static final String GC_LOG_ZIP_FILE = "gcLog.zip";
 	public static final String JVM_OPTIONS_DEFAULT = "-Xmx100g -Xms8g -XX:+UnlockExperimentalVMOptions -XX:+UseZGC " +
-			"-XX:ConcGCThreads=14 -XX:ZMarkStackSpaceLimit=16g -XX:+UseLargePages -XX:MaxDirectMemorySize=32g " +
-			"-XX:MetaspaceSize=1g";
+			"-XX:ConcGCThreads=14 -XX:ZMarkStackSpaceLimit=16g -XX:+UseLargePages -XX:MaxDirectMemorySize=32g ";
 	public static final String JVM_OPTIONS_PARAMETER_STRING = "-Xmx%dg -Xms%dg -XX:+UnlockExperimentalVMOptions " +
 			"-XX:+UseZGC -XX:ConcGCThreads=14 -XX:ZMarkStackSpaceLimit=16g -XX:+UseLargePages " +
-			"-XX:MaxDirectMemorySize=%dg -XX:MetaspaceSize=1g";
-	public static final String JVM_OPTIONS_GC_LOG = "-Xlog:gc*:gc.log –XX:+PrintGCDetails -XX:+PrintGCDateStamps";
+			"-XX:MaxDirectMemorySize=%dg ";
+	public static final String JVM_OPTIONS_GC_LOG = " -Xlog:gc*:gc.log -XX:+PrintGCDetails ";
 	public static final String GET_TOTAL_MB_MEMORY_ON_NODE = "vmstat -s -SM | head -n1 | awk '{ printf  \"%10s\\n\", " +
 			"$1 }' | sed 's/^[[:space:]]*//g'";
 	/* this section is for dynamic allocation of huge pages and memory of instances */
